--- a/index.html
+++ b/index.html
@@ -274,6 +274,20 @@
 						
 								<div class="navbar-dropdown">
 									<p class="navbar-item">
+										21/02/2021
+									</p>
+									<hr class="navbar-divider">
+									<a class="navbar-item" href="./#21022021-1">
+										Gravure de la planche du fond à la CNC
+									</a>
+									<a class="navbar-item" href="./#21022021-2">
+										Modélisation 3D - Télécommande
+									</a>
+									<a class="navbar-item" href="./#21022021-3">
+										Modélisation 3D - Pièce d'attache pour les planches arrière du tank
+									</a>
+									<hr class="navbar-divider">
+									<p class="navbar-item">
 										20/02/2021
 									</p>
 									<hr class="navbar-divider">
@@ -482,13 +496,25 @@
 					<p>Dans cette section, vous pouvez admirer l'avancée du projet !</p>
 					<p>Vous pouvez voir toutes les étapes à la réalisation du robot.</p>
 				</div>
-				<button type="button" class="collapsible" id="17022021-1" style="transition-delay: 0s;">21/02/2021 - Modélisation 3D - Côté et importation des composants électronique du robot</button>
+				<button type="button" class="collapsible" id="21022021-1">21/02/2021 - Gravure de la planche du fond à la CNC</button>
 				<div class="content collapse is-medium">
-					<p style="padding: 1rem 18px 0 18px;">Hop la boum ! La suite continue !</p>
-					<p style="padding: 0 18px;">Davide est en forme et continue à modéliser tout ça !</p>
-					<p style="padding: 0 18px;">Les différents éléments électronique servant pour le robot sont importés dans Fusion 360. Nous retrouvons : le RFID, l'ultrason, le servo moteur, le moteur pas à pas et évidement l'arduino nano.</p>
-					<p style="padding: 0 18px">C'est également le moment de modéliser un des flancs du bas du tank. Le but est de fixer les roulements, chenilles, moteur pas à pas et autres pour pouvoir tester sommairement lors d'un test.</p>
-					<p style="padding: 0 18px 2rem 18px;">Le but de ce futur test sera de voir si le couple du moteur pas à pas sera suffisant pour faire tourner la chenille mais aussi pour avoir un minimum de vitesse possible !</p>
+					<p style="padding: 1rem 18px 0 18px;">On ne s'arrête plus !</p>
+					<p style="padding: 0 18px;">Comme on est fan de notre projet, du groupe, du nom, de l'année, de la vie, de l'air, des particules qui nous entoures, des bosons de Higgs, ... - bon c'est possible que l'on soit un peu trop emballé - on a gravé notre nom et l'année sur la planche du fond du tank.</p>
+					<p style="padding: 0 18px;">Comme ça c'est un petit souvenir permanent, gravé à la CNC.</p>
+					<img style="padding: 0 18px 2rem 18px;" width="100%" src="https://media.discordapp.net/attachments/501009071365685249/813070033399054356/IMG_20210221_162156.jpg" alt="Planche de fond du tank gravée">
+				</div>
+				<button type="button" class="collapsible" id="21022021-2">21/02/2021 - Modélisation 3D - Télécommande</button>
+				<div class="content collapse is-medium">
+					<p style="padding: 1rem 18px 0 18px;">La machine Ugo, elle aussi lancée, continue la télécomande avec l'aide de Davide.</p>
+					<p style="padding: 0 18px;">Les travaux collossaux (à nos yeux) avance à pas de géants !</p>
+					<p style="padding: 0 18px;">Après de longs moments de réflexion, nous avons gardé le design du plan 2D. Nous somme arrivés sur une base plus petite que la partie du dessus.</p>
+					<p style="padding: 0 18px">Cela permet une bonne prise en main comme vous pouvez voir juste en dessous. Il manque tout le bord mais ça c'est plus un prochain épisode...</p>
+					<img style="padding: 0 18px 2rem 18px;" width="100%" src="https://media.discordapp.net/attachments/501009071365685249/813070033399054356/IMG_20210221_162156.jpg" alt="Planche de fond du tank gravée">
+				</div>
+				<button type="button" class="collapsible" id="21022021-3">21/02/2021 - Modélisation 3D - Pièce d'attache pour les planches arrière du tank</button>
+				<div class="content collapse is-medium">
+					<p style="padding: 1rem 18px 0 18px;">Après la planche de fond du tank, pour que les deux flancs tiennent, il est judicieux de s'atteler à la modélisation 3D des "coins" qui permettent d'assembler les deux petites planche arrière du tank.</p>
+					<p style="padding: 0 18px 2rem 18px;">La modélisation le soir pour imprimer dès le lendemain matin !</p>
 				</div>
 				<button type="button" class="collapsible" id="20022021-1" style="transition-delay: 0s;">20/02/2021 - Plan 2D - Télécommande</button>
 				<div class="content collapse is-medium">
