--- a/index.html
+++ b/index.html
@@ -509,7 +509,7 @@
 					<p style="padding: 0 18px;">Les travaux collossaux (à nos yeux) avance à pas de géants !</p>
 					<p style="padding: 0 18px;">Après de longs moments de réflexion, nous avons gardé le design du plan 2D. Nous somme arrivés sur une base plus petite que la partie du dessus.</p>
 					<p style="padding: 0 18px">Cela permet une bonne prise en main comme vous pouvez voir juste en dessous. Il manque tout le bord mais ça c'est plus un prochain épisode...</p>
-					<img style="padding: 0 18px 2rem 18px;" width="100%" src="https://media.discordapp.net/attachments/501009071365685249/813070033399054356/IMG_20210221_162156.jpg" alt="Planche de fond du tank gravée">
+					<img style="padding: 0 18px 2rem 18px;" width="100%" src="https://media.discordapp.net/attachments/501009071365685249/813434863888760902/unknown.png?width=630&height=473" alt="Planche de fond du tank gravée">
 				</div>
 				<button type="button" class="collapsible" id="21022021-3">21/02/2021 - Modélisation 3D - Pièce d'attache pour les planches arrière du tank</button>
 				<div class="content collapse is-medium">
