--- a/index.html
+++ b/index.html
@@ -273,6 +273,23 @@
 								</a>
 						
 								<div class="navbar-dropdown">
+									<div class="navbar-item has-dropdown is-hoverable" href="./#actu">
+										<a class="navbar-link">
+											21/02/2021
+										</a>
+								
+										<div class="navbar-dropdown">
+											<a class="navbar-item" href="./#21022021-1">
+												Gravure de la planche du fond à la CNC
+											</a>
+											<a class="navbar-item" href="./#21022021-2">
+												Modélisation 3D - Télécommande
+											</a>
+											<a class="navbar-item" href="./#21022021-3">
+												Modélisation 3D - Pièce d'attache pour les planches arrière du tank
+											</a>
+										</div>
+									</div>
 									<p class="navbar-item">
 										21/02/2021
 									</p>
