--- a/index.html
+++ b/index.html
@@ -103,7 +103,10 @@
     		color: rgba(245,245,245,1)!important;
 		}
 		.navbar-item.has-dropdown:hover .navbar-link {
-    		background-color: #363636;
+			background-color: #363636;
+		}
+		.navbar-dropdown.drop2 a.navbar-item {
+			background-color: #545454;
 		}
 
 		.content h1, .content h3, .content h5 {
@@ -206,7 +209,7 @@
 		}
 		
 		.collapsible.active, .collapsible:hover {
-			background-color: #555;
+			background-color: #545454;
 		}
 		
 		.collapsible.active {
@@ -273,12 +276,12 @@
 								</a>
 						
 								<div class="navbar-dropdown">
-									<div class="navbar-item has-dropdown is-hoverable" href="./#actu">
+									<div class="navbar-item has-dropdown is-hoverable">
 										<a class="navbar-link">
 											21/02/2021
 										</a>
 								
-										<div class="navbar-dropdown">
+										<div class="navbar-dropdown drop2">
 											<a class="navbar-item" href="./#21022021-1">
 												Gravure de la planche du fond à la CNC
 											</a>
