--- a/index.html
+++ b/index.html
@@ -100,13 +100,16 @@
 			background-color: #363636;
 		}
 		.navbar-link {
-    		color: rgba(245,245,245,1)!important;
+			color: rgba(245,245,245,1)!important;
 		}
 		.navbar-item.has-dropdown:hover .navbar-link {
 			background-color: #363636;
 		}
 		.navbar-dropdown.drop2 a.navbar-item {
 			background-color: #545454;
+		}
+		.navbar-link:not(.is-arrowless)::after {
+			border-color: #00b89c;
 		}
 
 		.content h1, .content h3, .content h5 {
