--- a/index.html
+++ b/index.html
@@ -229,6 +229,8 @@
 
 		.active:after {
 			content: "❮";
+			-webkit-transform: rotate(-45deg);
+			transform: rotate(-45deg);
 		}
 
 		.content.collapse {
