--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
 	<title>ArduiTank | Accueil</title>
 	<meta itemprop="name" content="ArduiTank | Accueil" />
+	<meta name="keywords" content="ArduiTank, Arduino, DIY, bois, 3D, modélisation, ISAT, EPHEC, AntoDB"/>
 
 	<link rel="apple-touch-icon" type="image/png" sizes="180x180" href="./img/Logo V2.2 min.png" class="next-head">
 	<link rel="icon" type="image/png" sizes="32x32" href="./img/Logo V2.2 min.png" class="next-head">
@@ -542,7 +543,7 @@
 					<p style="padding: 0 18px;">Comme ça c'est un petit souvenir permanent, gravé à la CNC.</p>
 					<img style="padding: 0 18px 2rem 18px;" width="100%" src="https://media.discordapp.net/attachments/501009071365685249/813070033399054356/IMG_20210221_162156.jpg" alt="Planche de fond du tank gravée">
 				</div>
-				
+
 				<button type="button" class="collapsible" id="20022021-2" style="transition-delay: 0s;">20/02/2021 - Impression 3D chaîne et engrenage & CNC flancs du tank</button>
 				<div class="content collapse is-medium">
 					<p style="padding: 1rem 18px 0 18px;">La machine Davide est en route, on ne l'arrête plus !</p>
