--- a/index.html
+++ b/index.html
@@ -300,6 +300,29 @@
 											</a>
 										</div>
 									</div>
+									<div class="dropdown">
+										<div class="dropdown-trigger">
+											<button class="button" aria-haspopup="true" aria-controls="dropdown-menu3">
+												<span>21/02/2021</span>
+												<span class="icon is-small">
+													<i class="fas fa-angle-down" aria-hidden="true"></i>
+												</span>
+										</button>
+										</div>
+											<div class="dropdown-menu" id="dropdown-menu3" role="menu">
+												<div class="dropdown-content">
+													<a class="dropdown-item" href="./#21022021-3">
+														Modélisation 3D - Pièce d'attache pour les planches arrière du tank
+													</a>
+													<a class="dropdown-item" href="./#21022021-2">
+														Modélisation 3D - Télécommande
+													</a>
+													<a class="dropdown-item" href="./#21022021-1">
+														Gravure de la planche du fond à la CNC
+													</a>
+												</div>
+											</div>
+										</div>
 									<p class="navbar-item">
 										21/02/2021
 									</p>
