--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
 								</a>
 						
 								<div class="navbar-dropdown">
-									<div class="navbar-item has-dropdown is-hoverable">
+									<!--<div class="navbar-item has-dropdown is-hoverable">
 										<a class="navbar-link">
 											21/02/2021
 										</a>
@@ -299,7 +299,7 @@
 												Gravure de la planche du fond à la CNC
 											</a>
 										</div>
-									</div>
+									</div>-->
 									<div class="dropdown">
 										<div class="dropdown-trigger">
 											<button class="button" aria-haspopup="true" aria-controls="dropdown-menu3">
