--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 			background-color: #363636!important;
 		}
 		.navbar-dropdown {
-			background-color: #363636;
+			background-color: rgba(74, 74, 74, 0.9);
 		}
 		.navbar-link {
 			color: rgba(245,245,245,1)!important;
