--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
 		/* Colors */
 		nav.navbar {
-			background-color: #363636!important;
+			background-color: rgba(84, 84, 84, 1)!important;
 		}
 		.navbar-dropdown {
 			background-color: rgba(74, 74, 74, 0.9);
@@ -248,7 +248,7 @@
 <body>
 	<section class="hero is-dark is-fullheight">
 		<div class="hero-head">
-			<nav class="navbar is-fixed-top" role="navigation" aria-label="main navigation">
+			<nav class="navbar is-fixed-top" role="navigation" aria-label="main navigation" id="nav">
 				<div class="container">
 					<div class="navbar-brand">
 						<a class="navbar-item" href="./">
@@ -972,6 +972,22 @@
 				});
 			}
 		});
+	</script>
+	<!-- Transparent navbar -->
+	<script>
+		// Get navbar
+		var navbar = document.getElementById("nav");
+
+		// When the user scrolls down 1060px from the top of the document, show the button
+		window.onscroll = function() {scrollFunctionNav()};
+
+		function scrollFunctionNav() {
+			if (document.body.scrollTop > 1060 || document.documentElement.scrollTop > 1060) {
+				navbar.style.backgroundColor = "rgba(84, 84, 84, 0.8)";
+			} else {
+				navbar.style.backgroundColor = "rgba(84, 84, 84, 1)";
+			}
+		}
 	</script>
 
 	<!-- Script for Collapse -->
