--- a/index.html
+++ b/index.html
@@ -94,9 +94,9 @@
 		}
 
 		/* Colors */
-		nav.navbar {
+		/*nav.navbar {
 			background-color: rgba(84, 84, 84, 1)!important;
-		}
+		}*/
 		.navbar-dropdown {
 			background-color: rgba(74, 74, 74, 0.9);
 		}
@@ -248,7 +248,7 @@
 <body>
 	<section class="hero is-dark is-fullheight">
 		<div class="hero-head">
-			<nav class="navbar is-fixed-top" role="navigation" aria-label="main navigation" id="navbarid">
+			<nav class="navbar is-fixed-top" role="navigation" aria-label="main navigation" id="navbarid" style="background-color: rgba(84, 84, 84, 1);">
 				<div class="container">
 					<div class="navbar-brand">
 						<a class="navbar-item" href="./">
