--- a/index.html
+++ b/index.html
@@ -982,6 +982,9 @@
 		window.onscroll = function() {scrollFunctionNav()};
 
 		function scrollFunctionNav() {
+			console.log(document.body.scrollTop);
+			console.log(document.documentElement.scrollTop);
+			console.log("---------------");
 			if (document.body.scrollTop > 1060 || document.documentElement.scrollTop > 1060) {
 				navbarEl.style.backgroundColor = "rgba(84, 84, 84, 0.8)";
 			} else {
