--- a/index.html
+++ b/index.html
@@ -985,7 +985,7 @@
 			console.log(document.body.scrollTop);
 			console.log(document.documentElement.scrollTop);
 			console.log("---------------");
-			if (document.body.scrollTop > 1060 || document.documentElement.scrollTop > 1060) {
+			if (document.body.scrollTop > 20) {
 				navbarEl.style.backgroundColor = "rgba(84, 84, 84, 0.8)";
 			} else {
 				navbarEl.style.backgroundColor = "rgba(84, 84, 84, 1)";
