--- a/index.html
+++ b/index.html
@@ -982,10 +982,10 @@
 		window.onscroll = function() {scrollFunctionNav()};
 
 		function scrollFunctionNav() {
-			console.log(document.body.scrollTop);
+			/*console.log(document.body.scrollTop);
 			console.log(document.documentElement.scrollTop);
-			console.log("---------------");
-			if (document.body.scrollTop > 20) {
+			console.log("---------------");*/
+			if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
 				navbarEl.style.backgroundColor = "rgba(84, 84, 84, 0.8)";
 			} else {
 				navbarEl.style.backgroundColor = "rgba(84, 84, 84, 1)";
