--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
 <body>
 	<section class="hero is-dark is-fullheight">
 		<div class="hero-head">
-			<nav class="navbar is-fixed-top" role="navigation" aria-label="main navigation" id="navbarid" style="background-color: rgba(84, 84, 84, 1);">
+			<nav class="navbar is-fixed-top" role="navigation" aria-label="main navigation" id="navbarid">
 				<div class="container">
 					<div class="navbar-brand">
 						<a class="navbar-item" href="./">
