--- a/index.html
+++ b/index.html
@@ -988,6 +988,7 @@
 			if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
 				//navbarEl.style.backgroundColor = "rgba(84, 84, 84, 0.8)";
 				navbarEl.style.backgroundColor = "green";
+				alert(document.getElementById("navbarid"));
 			} else {
 				//navbarEl.style.backgroundColor = "rgba(84, 84, 84, 1)";
 				navbarEl.style.backgroundColor = "red";
