--- a/index.html
+++ b/index.html
@@ -985,7 +985,7 @@
 			/*console.log(document.body.scrollTop);
 			console.log(document.documentElement.scrollTop);
 			console.log("---------------");*/
-			if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+			if (document.body.scrollTop > 20) {
 				//navbarEl.style.backgroundColor = "rgba(84, 84, 84, 0.8)";
 				document.getElementById("navbarid").style.backgroundColor = "green";
 				//alert(document.getElementById("navbarid"));
