--- a/index.html
+++ b/index.html
@@ -1003,7 +1003,7 @@
 		window.onscroll = function() {scrollFunctionNav()};
 
 		function scrollFunctionNav() {
-			if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+			if (document.body.scrollTop > 20) {
 				document.getElementById("navbarid").style.backgroundColor = "green";
 			} else {
 				document.getElementById("navbarid").style.backgroundColor = "red";
