--- a/index.html
+++ b/index.html
@@ -1030,12 +1030,12 @@
 			if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
 				mybutton.style.display = "block";
 			} else {
-				if (document.body.scrollTop > 40 || document.documentElement.scrollTop > 40) {
-					document.getElementById("navbarid").style.backgroundColor = "green";
-				} else {
-					document.getElementById("navbarid").style.backgroundColor = "yellow";
-				}
 				mybutton.style.display = "none";
+			}
+			if (document.body.scrollTop > 40 || document.documentElement.scrollTop > 40) {
+				document.getElementById("navbarid").style.backgroundColor = "red";
+			} else {
+				document.getElementById("navbarid").style.backgroundColor = "yellow";
 			}
 		}
 
