--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
 <body>
 	<section class="hero is-dark is-fullheight">
 		<div class="hero-head">
-			<nav class="navbar is-fixed-top" role="navigation" aria-label="main navigation" id="navbarid" style="background-color: brown;">
+			<nav class="navbar is-fixed-top" role="navigation" aria-label="main navigation" id="navbarid" style="background-color: rgba(84, 84, 84, 1);">
 				<div class="container">
 					<div class="navbar-brand">
 						<a class="navbar-item" href="./">
@@ -1033,9 +1033,9 @@
 				mybutton.style.display = "none";
 			}
 			if (document.body.scrollTop > 1060 || document.documentElement.scrollTop > 1060) {
-				document.getElementById("navbarid").style.backgroundColor = "red";
+				document.getElementById("navbarid").style.backgroundColor = "rgba(84, 84, 84, 0.8)";
 			} else {
-				document.getElementById("navbarid").style.backgroundColor = "yellow";
+				document.getElementById("navbarid").style.backgroundColor = "rgba(84, 84, 84, 1)";
 			}
 		}
 
