--- a/index.html
+++ b/index.html
@@ -545,6 +545,7 @@
 					<p>Dans cette section, vous pouvez admirer l'avancée du projet !</p>
 					<p>Vous pouvez voir toutes les étapes à la réalisation du robot.</p>
 				</div>
+				<!-- 22-02-2021 - Site : Animation. Navbar animée, les actualités => Bouton animé pas même tempo ouvrir/fermé -->
 				<button type="button" class="collapsible" id="21022021-3">21/02/2021 - Modélisation 3D - Pièce d'attache pour les planches arrière du tank</button>
 				<div class="content collapse is-medium">
 					<p style="padding: 1rem 18px 0 18px;">Après la planche de fond du tank, pour que les deux flancs tiennent, il est judicieux de s'atteler à la modélisation 3D des "coins" qui permettent d'assembler les deux petites planche arrière du tank.</p>
