--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
 		}
 
 		.collapsible:after {
-			content: "\0f077";
+			content: "0xf077";
 			color: #00b89c;
 			font-weight: bold;
 			float: right;
