--- a/index.html
+++ b/index.html
@@ -220,18 +220,18 @@
 		}
 
 		.collapsible:after {
-			content: "0xf077";
+			content: "❮";
 			color: #00b89c;
 			font-weight: bold;
 			float: right;
 			margin-left: 5px;
-			-webkit-transform: rotate(-180deg);
-			transform: rotate(-180deg);
+			-webkit-transform: rotate(-90deg);
+			transform: rotate(-90deg);
 		}
 
 		.active:after {
-			-webkit-transform: rotate(0deg);
-			transform: rotate(0deg);
+			-webkit-transform: rotate(90deg);
+			transform: rotate(90deg);
 		}
 
 		.content.collapse {
