--- a/index.html
+++ b/index.html
@@ -546,6 +546,43 @@
 					<p>Vous pouvez voir toutes les étapes à la réalisation du robot.</p>
 				</div>
 				<!-- 22-02-2021 - Site : Animation. Navbar animée, les actualités => Bouton animé pas même tempo ouvrir/fermé -->
+				<button type="button" class="collapsible" id="22022021-1">22/02/2021 - Impression 3D - Pièce d'attache pour les planches arrière du tank & découpe CNC des planches</button>
+				<div class="content collapse is-medium">
+					<p style="padding: 1rem 18px 0 18px;">Et c'est partiiiii pour l'impression de la pièce qui va tenir les deux planches du fond du tank.</p>
+					<div class="tile is-ancestor">
+						<div class="tile is-parent is-horizontal">
+							<div class="tile is-child">
+								<figure class="image">
+									<img src="https://cdn.discordapp.com/attachments/807610088361164810/813338588833513492/IMG_20210222_101623.jpg" alt="Une face avec le coin qui rentient les 2 planche du fond" style="padding: 0;">
+								</figure>
+							</div>
+						</div>
+						<div class="tile is-parent is-horizontal">
+							<div class="tile is-child">
+								<figure class="image">
+									<img src="https://media.discordapp.net/attachments/807610088361164810/813339061888614400/IMG_20210222_101547.jpg" alt="La face avec son coin assemblé sur le tank (que 1 coin)" style="padding: 0;">
+								</figure>
+							</div>
+						</div>
+					</div>
+					<p style="padding: 0 18px">S'en suit l'impression de l'autre coin (symétrie) et des découpe à la CNC des deux planches à l'arrière.</p>
+					<div class="tile is-ancestor" style="padding: 0 18px 2rem 18px;">
+						<div class="tile is-parent is-horizontal">
+							<div class="tile is-child">
+								<figure class="image">
+									<img src="https://cdn.discordapp.com/attachments/807610088361164810/813451808995409940/IMG_20210222_174533.jpg" alt="Une face dans le fond tenues par les deux coins" style="padding: 0;">
+								</figure>
+							</div>
+						</div>
+						<div class="tile is-parent is-horizontal">
+							<div class="tile is-child">
+								<figure class="image">
+									<img src="https://cdn.discordapp.com/attachments/807610088361164810/813452151971250186/IMG_20210222_174613.jpg" alt="Une face dans le fond tenues par les deux coins, tank renversé" style="padding: 0;">
+								</figure>
+							</div>
+						</div>
+					</div>
+				</div>
 				<button type="button" class="collapsible" id="21022021-3">21/02/2021 - Modélisation 3D - Pièce d'attache pour les planches arrière du tank</button>
 				<div class="content collapse is-medium">
 					<p style="padding: 1rem 18px 0 18px;">Après la planche de fond du tank, pour que les deux flancs tiennent, il est judicieux de s'atteler à la modélisation 3D des "coins" qui permettent d'assembler les deux petites planche arrière du tank.</p>
