--- a/index.html
+++ b/index.html
@@ -546,6 +546,50 @@
 					<p>Vous pouvez voir toutes les étapes à la réalisation du robot.</p>
 				</div>
 				<!-- 22-02-2021 - Site : Animation. Navbar animée, les actualités => Bouton animé pas même tempo ouvrir/fermé -->
+				<button type="button" class="collapsible" id="22022021-3">22/02/2021 - CNC - Suite découpe des planches derière le tank</button>
+				<div class="content collapse is-medium">
+					<p style="padding: 1rem 18px 0 18px;">On continue avec la découpe de la planche du fond avec l'intégration de l'écran LCD (et pas LSD, d'ailleurs des écran LSD n'existe pas ! En auriez-vous pris ?).</p>
+					<p style="padding: 0 18px;">Le projet avance vite ! On a déjà bien dépasser le planning mais on continue à fond sur notre lancée !</p>
+					<div class="tile is-ancestor">
+						<div class="tile is-parent is-horizontal">
+							<div class="tile is-child">
+								<figure class="image">
+									<img src="https://cdn.discordapp.com/attachments/807610088361164810/813477301869871164/IMG_20210222_192638.jpg" alt="Planche du fond avec l'écran, tank pris de devant" style="padding: 0;">
+								</figure>
+							</div>
+						</div>
+						<div class="tile is-parent is-horizontal">
+							<div class="tile is-child">
+								<figure class="image">
+									<img src="https://cdn.discordapp.com/attachments/807610088361164810/813477572838686750/IMG_20210222_192648.jpg" alt="Planche du fond avec l'écran, tank pris de derrière" style="padding: 0;">
+								</figure>
+							</div>
+						</div>
+						<div class="tile is-parent is-horizontal">
+							<div class="tile is-child">
+								<figure class="image">
+									<img src="https://cdn.discordapp.com/attachments/807610088361164810/813477989320884244/IMG_20210222_192714.jpg" alt="Planche du fond avec l'écran, tank retourné" style="padding: 0;">
+								</figure>
+							</div>
+						</div>
+					</div>
+					<p style="padding: 0 18px 2rem 18px;">On aimerait aussi intégrer un ruban led pour que cela soit encore plus estétique.</p>
+				</div>
+				<button type="button" class="collapsible" id="22022021-2">22/02/2021 - Modélisation 3D - Télécommande</button>
+				<div class="content collapse is-medium">
+					<p style="padding: 1rem 18px 0 18px;">Après réflexion, nous avons trouvé une solution pour fermer la télécomande en reliant les deux planches (bois et plexiglass).</p>
+					<p style="padding: 0 18px;">Cela va être agréable à la vue est au touché normalement. On aura du bois pour le dessous, de l'impression 3D pour le coutour avec des arrondis, du plexiglass au dessus pour voir tous les composants.</p>
+					<div class="tile is-ancestor">
+						<div class="tile is-parent is-horizontal">
+							<div class="tile is-child">
+								<figure class="image">
+									<img src="https://media.discordapp.net/attachments/807610088361164810/813431082938007572/unknown.png" alt="Modélisation 3D de la télécomande finie" style="padding: 0;">
+								</figure>
+							</div>
+						</div>
+					</div>
+					<p style="padding: 0 18px 2rem 18px;">On aimerait aussi intégrer un ruban led pour que cela soit encore plus estétique.</p>
+				</div>
 				<button type="button" class="collapsible" id="22022021-1">22/02/2021 - Impression 3D - Pièce d'attache pour les planches arrière du tank & découpe CNC des planches</button>
 				<div class="content collapse is-medium">
 					<p style="padding: 1rem 18px 0 18px;">Et c'est partiiiii pour l'impression de la pièce qui va tenir les deux planches du fond du tank.</p>
