--- a/index.html
+++ b/index.html
@@ -546,6 +546,21 @@
 					<p>Vous pouvez voir toutes les étapes à la réalisation du robot.</p>
 				</div>
 				<!-- 22-02-2021 - Site : Animation. Navbar animée, les actualités => Bouton animé pas même tempo ouvrir/fermé -->
+				<button type="button" class="collapsible" id="22022021-4">22/02/2021 - Modélisation 3D - Pièce d'attache des trois planche du dessus et maintient de la planche arrière</button>
+				<div class="content collapse is-medium">
+					<p style="padding: 1rem 18px 0 18px;">Davide s'occupe de terminer la journée par la modélisation 3D de la pièce qui va maintenir la grosse plache du dessus, ainsi que les deux plus petites qui sont vers l'arrière.</p>
+					<p style="padding: 0 18px;">Cette pièce maintiendra la planche de fond (avec le LCD) en place.</p>
+					<div class="tile is-ancestor">
+						<div class="tile is-parent is-horizontal">
+							<div class="tile is-child">
+								<figure class="image">
+									<img src="https://cdn.discordapp.com/attachments/807610088361164810/813541516576030760/unknown.png" alt="Pièce 3D qui maintiendra les trois planches du dessus" style="padding: 0;">
+								</figure>
+							</div>
+						</div>
+					</div>
+					<p style="padding: 0 18px 2rem 18px;">Cette pièce est très importante afin de maintenir la planche centrale du dessus qui aura la tourelle (et son poids) dessus.</p>
+				</div>
 				<button type="button" class="collapsible" id="22022021-3">22/02/2021 - CNC - Suite découpe des planches derière le tank</button>
 				<div class="content collapse is-medium">
 					<p style="padding: 1rem 18px 0 18px;">On continue avec la découpe de la planche du fond avec l'intégration de l'écran LCD (et pas LSD, d'ailleurs des écran LSD n'existe pas ! En auriez-vous pris ?).</p>
