--- a/index.html
+++ b/index.html
@@ -546,6 +546,18 @@
 					<p>Vous pouvez voir toutes les étapes à la réalisation du robot.</p>
 				</div>
 				<!-- 22-02-2021 - Site : Animation. Navbar animée, les actualités => Bouton animé pas même tempo ouvrir/fermé -->
+				<button type="button" class="collapsible" id="22022021-5">22/02/2021 - Site - État actuel et animations</button>
+				<div class="content collapse is-medium">
+					<p style="padding: 1rem 18px 0 18px;">Antonin avance sur le site, l'HTML (structure) et le CSS (aperçu) est presque fini néanmoins le responsive (adaptation pour les différents appareils) n'est vraiment pas bon.</p>
+					<p style="padding: 0 18px;">En cette soirée du 22 février, pas mal d'animations ont été faites en JS :</p>
+					<p style="padding: 0 18px 2rem 18px;;">
+						<ul>
+							<li>Enfin les actualités ont les bords du dessous (droite et gauche) qui quand on clique sur le bandeau se mettent droit instantanément et si on referme, les bords se remettent en arrondis à la fin du "rembobinage" de l'actualité.</li>
+							<li>La navbar (menu supérieur) est fixe sur le haut de la page. Si on descend dans le site, on la voit toujours.</li>
+							<li>La navbar change de couleur et devient un peu transparente quand on dépasse la première image avec le logo dessus. (Fonctionne uniquement sur PC et tablettes suite au problème de responsive.)</li>
+						</ul>
+					</p>
+				</div>
 				<button type="button" class="collapsible" id="22022021-4">22/02/2021 - Modélisation 3D - Pièce d'attache des trois planche du dessus et maintient de la planche arrière</button>
 				<div class="content collapse is-medium">
 					<p style="padding: 1rem 18px 0 18px;">Davide s'occupe de terminer la journée par la modélisation 3D de la pièce qui va maintenir la grosse plache du dessus, ainsi que les deux plus petites qui sont vers l'arrière.</p>
