--- a/index.html
+++ b/index.html
@@ -550,7 +550,7 @@
 				<div class="content collapse is-medium">
 					<p style="padding: 1rem 18px 0 18px;">Antonin avance sur le site, l'HTML (structure) et le CSS (aperçu) est presque fini néanmoins le responsive (adaptation pour les différents appareils) n'est vraiment pas bon.</p>
 					<p style="padding: 0 18px;">En cette soirée du 22 février, pas mal d'animations ont été faites en JS :</p>
-					<p style="padding: 0 18px 2rem 18px;;">
+					<p style="padding: 0 18px 2rem 18px;">
 						<ul>
 							<li>Enfin les actualités ont les bords du dessous (droite et gauche) qui quand on clique sur le bandeau se mettent droit instantanément et si on referme, les bords se remettent en arrondis à la fin du "rembobinage" de l'actualité.</li>
 							<li>La navbar (menu supérieur) est fixe sur le haut de la page. Si on descend dans le site, on la voit toujours.</li>
